--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.12.*"
+fastapi = "^0.111.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
+taskipy = "^1.13.0"
+ruff = "^0.5.1"
+httpx = "^0.27.0"
 
 [build-system]
 requires = ["poetry-core"]
