--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,10 @@ addopts = '-p no:warnings'
 [tool.taskipy.tasks]
 lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
-run = 'fastapi dev fast_zero/app.py'
+run = 'fastapi dev fast_zero_hero/app.py'
 
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=fast_zero -vv'
+test = 'pytest -s -x --cov=fast_zero_hero -vv'
 post_test = 'coverage html'
 
 [build-system]
